Fix text alignment

--- a/app/teachingCall/css/teaching-call-form.css
+++ b/app/teachingCall/css/teaching-call-form.css
@@ -900,6 +900,8 @@ li.active-term .dropdown-term-row {
 
 .suggest-course-container .search-course-input {
 	width: auto;
+	text-align: left;
+	cursor: text;
 }
 
 .suggest-course-input {
